# parallax

./: .gitignore  GPU_SPECS.md  README.md  RESEARCH_BRIEF.md  SCOPE.md  pyproject.toml
configs/: adaptive_composite.yaml  depth_guidance.yaml  flow_guidance.yaml  normal_guidance.yaml  segmentation_guidance.yaml  semantic_guidance.yaml
scripts/: run_guided_i2v.py
src/kora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/parallax/: __init__.py  pipeline.py
src/parallax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/parallax/evaluation/: __init__.py  metrics.py
src/parallax/guidance/: __init__.py  adaptive_composite.py  base.py  composite.py  depth.py  flow.py  normal.py  segmentation.py  semantic.py
src/parallax/utils/: __init__.py  latent_utils.py  visualization.py
tests/: test_adaptive_composite.py  test_evaluation.py  test_flow_guidance.py  test_guidance_modules.py  test_normal_guidance.py  test_pipeline.py
